// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Embed Themes > SpotifyEmbedTypes enum should match snapshot 1`] = `
{
  "DARK": "0",
  "LIGHT": "1",
}
`;

exports[`Embed Types and URL's > SpotifyEmbedTypes enum should match snapshot 1`] = `
{
  "ALBUM": "album",
  "ARTIST": "artist",
  "EPISODE": "episode",
  "PLAYLIST": "playlist",
  "SHOW": "show",
  "TRACK": "track",
}
`;

exports[`Embed Types and URL's > SpotifyEmbedUrl enum should match snapshot 1`] = `
{
  "ALBUM": "https://open.spotify.com/embed/album/",
  "ARTIST": "https://open.spotify.com/embed/artist/",
  "EPISODE": "https://open.spotify.com/embed/episode/",
  "PLAYLIST": "https://open.spotify.com/embed/playlist/",
  "SHOW": "https://open.spotify.com/embed/show/",
  "TRACK": "https://open.spotify.com/embed/track/",
}
`;

exports[`Sizes > Compact enum should match snapshot 1`] = `
{
  "300": "WIDTH",
  "80": "HEIGHT",
  "HEIGHT": 80,
  "WIDTH": 300,
}
`;

exports[`Sizes > Default enum should match snapshot 1`] = `
{
  "300": "WIDTH",
  "380": "HEIGHT",
  "HEIGHT": 380,
  "WIDTH": 300,
}
`;
